@@ -55,6 +55,12 @@ void MudHandler_CHARSET_Enable(MudTelnet *telnet, MudTelnetHandler *handler);
 void MudHandler_CHARSET_Disable(MudTelnet *telnet, MudTelnetHandler *handler);
 void MudHandler_CHARSET_HandleSubNeg(MudTelnet *telnet, guchar *buf, 
     guint len, MudTelnetHandler *handler);
+
+/* ZMP */
+void MudHandler_ZMP_Enable(MudTelnet *telnet, MudTelnetHandler *handler);
+void MudHandler_ZMP_Disable(MudTelnet *telnet, MudTelnetHandler *handler);
+void MudHandler_ZMP_HandleSubNeg(MudTelnet *telnet, guchar *buf, 
+    guint len, MudTelnetHandler *handler);
     
 #endif // MUD_TELNET_HANDLERS_H
 
